scss/app.scss
@import "variables";
@import "idai-components";
@import "catalog";
@import "con10t-page";
@import "con10t-image";
@import "con10t-widgets";
@import "con10t-media-tree.scss";
@import "leaflet";
@import "map";
@import "threedviewer";
@import "tabs";
@import "entity";
@import "search";
@import "ar-imageslider";
@import "ar-markdown-text-editor.scss";
@import "welcome-page";
@import "download-modal";
@import "footer";

body {
  overflow-y: scroll; /* always show scrollbar */
}

#noscriptinfo {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 3;
  background-color: rgba(85, 114, 161, 0.8);
  width: 100%;
  height: 100%;
  color: #eee;
  text-align: center;
  padding: 50px;
  font-size: 1.5em;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: default;
  flex-direction: column;
}

@media screen and (min-width: $screen-lg) and (max-width: $screen-lg) {

  .navbar-right {
    display: none !important;
  }

  .navbar .idai-navbar-search .input-group {
    width: 65%;
  }
}

@media screen and (max-width: 395px) {

  #projectLogo {
    display: block !important;
  }

  #projectLogo img {
    height: 28px !important;
    margin-top: 12px !important;
  }
}

.navbar-collapse {
  float: left;
}

@media screen and (max-width: 480px) {

  .navbar-collapse {
    margin-left: -75px;
  }
}

@media screen and (max-width: 333px) {

  .navbar-right {
    display: none !important;
  }
}

/* Breakpoints for project logos in footer */
@media screen and (max-width: 760px) {

  idai-footer .logoImage {

    height: 55px;
  }
}

@media screen and (max-width: 708px) {

  idai-footer .logoImage {

    height: 50px;
  }
}

@media screen and (max-width: 656px) {

  idai-footer .logoImage {

    height: 45px;
  }
}

@media screen and (max-width: 645px) {

  idai-footer .logoImage {

    height: 40px;
  }
}

@media screen and (max-width: 553px) {

  idai-footer .logoImage {

    height: 35px;
  }
}

@media screen and (max-width: 500px) {

  idai-footer .logoImage {

    height: 30px;
  }
}

@media screen and (max-width: 450px) {

  idai-footer .logoImage {

    height: 25px;
  }
}

@media screen and (max-width: 400px) {

  idai-footer .logoImage {

    height: 20px;
  }
}

@media screen and (max-width: 350px) {

  idai-footer .logoImage {

    height: 15px;
  }
}

.navbar-fixed-top .navbar-collapse,
.navbar-fixed-bottom .navbar-collapse {

  max-height: 375px;
}

.navbar-fixed-top .pull-left {

  position: relative;
  z-index: 1000;
}

idai-footer.white {
  background-color: white;
}

[ui-view] {
    padding-top: 50px;
}

.messages {
    margin-top: 60px;
    position: fixed;
    width: 100%;
    z-index: 1500;
    .alert {
      box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
    }
}

h1, h2, h3, h4, h5, h6 {
    line-height: 1.3;
    font-weight: 400;
}

h1 { font-size: 26px; }
h2 { font-size: 23px; }
h3 { font-size: 19px; }
h4 { font-size: 16px; }
h5 { font-size: 14px; }
h6 { font-size: 12px; }

.clickable {
  cursor: pointer;
}

#custom-catalog .panel-heading {
    background-color: #337ab7 !important;
    color: white;
}

#custom-catalog .panel-default {
    border-color: #337ab7;
}

#custom-entry .panel-heading {
    background-color: #f5f5f5 !important;
    color: #333;
}

#custom-entry .panel-default {
    border-color: #ddd;
}

.entity-title {
  margin-top: 5px;
  margin-bottom: 5px;
}

.entity-title .title {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.entity-title .title:hover{
  width: inherit;
  height: auto;
  white-space: normal;
}

.ar-imagegrid-cell-title {
  background: #ffffff;
  padding: 2px 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  height: 36px;
  line-height: 1.2;
}

.ar-imagegrid-cell-link {
  transition: all .3s ease;
}

.ar-imagegrid-cell-link:hover, .ar-imagegrid-cell-link.hover {
  box-shadow: 0 0 10px #777;
  z-index: 500;
  position: absolute;
  text-decoration: none;
}

.ar-imagegrid-cell-link:hover .ar-imagegrid-cell-title, .ar-imagegrid-cell-link.hover .ar-imagegrid-cell-title {
  width: inherit;
  height: auto;
  white-space: normal;
}

.ar-imagegrid-cell-link .label {
  position: absolute;
  left: 5px;
  top: 5px;
  opacity: 0.7;
  white-space: normal;
}

.ar-imagegrid-cell-link:hover .label {
  opacity: 1;
}

/* map widgets */

.ar-map * {
  box-sizing: content-box;
}

*[ar-map-popup] ul {
  padding-left: 10px;
}

.ar-map-geogrid-label {
  color: #3f3f3f;
  text-shadow: -1px 0 #fefefe, 0 1px #fefefe, 1px 0 #fefefe, 0 -1px #fefefe;
  font-weight: bold;
  width: 50px !important;
  left: -19px !important;
  top: -4px !important;
}

.ar-map-geogrid-label-inner {
  width: 90%;
  height: 90%;
  margin: 0 auto;
  text-align: center;
}

*[ar-grid-map] .leaflet-popup {
  bottom: 0 !important;
}

.single-line {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.capitalized {
  text-transform: capitalize;
}

.search-nav {
  padding-left: 5px;
  padding-right: 5px;
}

.search-nav .btn-sm {
  line-height: 1.1;
}

.search-nav .input-sm {
  height: 20px;
}

.row {
  margin-top:10px;
}
.fullscreenrow {
  margin: 0;
  height: 100vh;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  padding-top: 50px;
}
.fullscreencol {
  height: 100%;
  overflow-y: auto;
}

hr {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.facet.panel {
  margin-bottom: 10px;
}
.facet .panel-title {
  font-size: 12px;
  cursor: pointer;
  color: #37588e;
}
.facet ul {
	margin: 0;
}
.facet li {
  overflow: hidden;
  margin: 3px 0;
}
.facet li:hover, .facet li.selected {
  background-color: rgba(85, 114, 161, 0.9);
  color: white;
}
.facet li a {
  color: black;
  display: block;
  padding: 3px 6px;
}
.facet li:hover a {
  color: white;
  text-decoration: none;
}
.facet li:hover .text-muted, .facet li.selected a {
  color: white;
}

.linethrough-hover:hover {
	text-decoration: line-through;
  cursor: pointer;
}

.uppercase {
	text-transform: uppercase;
}

.imagePlaceholder {
  content:url("../img/arachnelogo.png");
}

.uib-accordion-group.panel {
  border-color: #ddd;
}

/* Für Filter-Seite, an den Facetten */
.accordion-with-list .panel-body {
  padding: 0;
}
.accordion-with-list .panel-title a {
  cursor: pointer;
}
.accordion-with-list .list-group-item {
  border: 0;
  border-bottom: 1px solid #DDDDDD;
  margin-bottom: 0;
}
#projectTeaser {
  padding-bottom: 15px;
}

.loading {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
  display: block;
  width: 20px;
  height: 20px;
  margin: 0 auto;
  border-width: 1px;
  border-style: solid;
  border-color: transparent rgb(66,139,202) rgb(66,139,202) rgba(0,0,0,0);
  border-radius: 10px;
  -webkit-animation: spin 1.5s linear infinite;
  animation: spin 1.5s linear infinite;
}

@-webkit-keyframes spin {
  0%{-webkit-transform: rotate(0deg);}
  100%{-webkit-transform: rotate(720deg);}
}
@keyframes spin {
  0%{transform: rotate(0deg);}
  100%{transform: rotate(720deg);}
}

.register-form .form-control.ng-invalid.ng-dirty {
  border-color: #a94442;
}

.register-form .form-control.ng-valid.ng-dirty {
  border-color: #3c763d;
}

.faq h2 {
  padding-top: 60px;   /* Hack:                                                                */
  margin-top:  -60px;  /* Offset headings, because anchors for toc lie under navbar otherwise. */
}

.faq h4 {
  /*margin-top: 20px;*/
  font-weight: bold;
}

.faq p {
  margin-left: 20px;
}

.faq p.query-example {
  font-style: italic;
}

.faq-nav.ui-scrollfix {
  position: fixed;
  top: 60px;
}

.con10t-page {
  text-align: justify;
}

.con10t-page img {
  padding: 0 15px;
}

.con10t-page img[align="right"] {
  padding: 0 0 0 15px;
}

.con10t-page img[align="left"] {
  padding: 0 15px 0 0;
}

.markdown-editor-button-group {
  margin-bottom: 3px;
}

.markdown-editor-button-group .btn {
  width: 24px;
  height: 24px;
}

.markdown-editor-button-group .btn span {
  text-align: center;
}

.markdown-editor-button-group .heading-button span {
  font-size: 11px;
  margin-left: -2px;
}

.markdown-editor-button-group .heading-button .heading-button-number {
  font-weight: bold;
  vertical-align: -1px;
  margin-left: 0;
}

/* OVERWRITING MARKER CLUSTER STYLING FOR LEAFLET PLUGIN MARKERCLUSTER */


.marker-cluster div {
    width: 32px;
    height: 32px;
    margin-left: 4px;
    margin-top: 4px;
    font: 16px 'Source Sans Pro', 'Helvetica', sans-serif;
    font-weight: bold;
}

:-moz-full-screen.fullscreenrow {
  padding-top: 0;
}

 /* NEEDED FOR CHROME FULLSCREEN MODE, USED ON ENTITYIMAGESCONTROLLER */
:-webkit-full-screen {
  width: 100%;
  height: 100%;
  padding-top: 0;
}

con10t-catalog-tree {

  width: 100%;
}

#searchResultCatalogueAdd .tooltip {
  width: 175px;
}

/* NEEDED FOR FACET INDEX */

.panel-nav {
  border-bottom: solid #ddd 1px;
  text-align: center;
  padding: 10px;
}
.panel-nav a {
  padding: 2px 2px;
  display: inline-block;
 }
.panel-nav a:hover {
  background-color: #eaeaea;
}

.panel-nav-search {
  border-bottom: solid #ddd 1px;
  text-align: center;
  padding: 10px;
}

.panel-nav-search a {
  padding: 2px 2px;
  display: inline-block;
}

#usermenu .glyphicon {
  color: rgb(66,139,202);
  margin-right: 10px;
}

#svg-container{
  position:relative;
}

#svg-container svg {
  width: 97vw;
  height: 95vh;
}

#svg-metadata-container{
  background-color: rgba(255,255,255,0.8);
  width:200px;
  padding: 10px;
  position: absolute;
}

#svg-status {
  text-align: center;
  margin-top: 5px;
  padding-top: 50px;
  padding-bottom: 50px;
}

